# wego

./: .cursorrules  .gitignore  .windsurfrules  README.md  WeGO_Development_Plan.md  WeGO_Product_Proposal.md  WeGO_Technical_Solution.md  admin-dev-server.js  ai-chat.css  ai-chat.html  ai-chat.js  app.js  docker-compose.yml  env.example  index.html  my-destinations.css  my-destinations.html  my-destinations.js  package-lock.json  package.json  personality.css  personality.html  personality.js  route-detail.css  route-detail.html  route-detail.js  style.css  test-distances.js  trip-end.css  trip-end.html  trip-end.js  update-db.js  vite.config.js
agent/: Dockerfile  graph.py  llm_settings.py  pyproject.toml  requirements.txt  server.py
agent/prompts/: system.md  upload_route.md
agent/prompts/personalities/: local.md
agent/tests/: test_route_upload_flow.py
agent/tools/: auto_query.py  confirm_route_upload.py  geofence_narration.py  llm_route_parse.py  plan_route.py  route_gap_reply.py  route_merge.py  search_knowledge.py  upload_route.py  web_search.py
backend/: Dockerfile
contracts/: chat-message.schema.json  checkin.schema.json  featured-route-catalog.schema.json  geofence-trigger.schema.json  home-carousel.schema.json  knowledge-chunk.schema.json  map-engine-setting.schema.json  route-ingestion.schema.json  route-plan-request.schema.json  route-plan-response.schema.json  route-upload.schema.json  route.schema.json  spot.schema.json  user-city-preference.schema.json
docs/: development-log.md  local-dev-runbook.md  openclaw-and-cursor-memory-runbook.md  (+7 more)
(+120 files in other folders)
